--- a/dom/estilo-v4.html
+++ b/dom/estilo-v4.html
@@ -32,21 +32,29 @@
 
     <div class="caixas">
         <div class="demo" :style="{'backgroundColor': cor}"></div>
-        <div class="demo"></div>
+        <div class="demo" :style="[meuEstilo, {height: altura}]"></div>
         <div class="demo"></div>
     </div>
     <hr>
     <input type="text" v-model="cor">
+    <input type="text" v-model="largura">
 </div>
 
 <script>
     var app = new Vue({
         el: "#app",
         data: {
-            cor: 'red'
+            cor: 'red',
+            largura: 100,
+            altura: 200
         },
         computed: {
-
+            meuEstilo() {
+                return {
+                    backgroundColor: this.cor,
+                    width: this.largura + 'px'
+                }
+            }
         }
     });
 </script>
